# prism

./: .clang-format  .csharpierignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Directory.Packages.props  Prism.sln  Prism.sln.DotSettings  Prism.slnx  prism.natvis  vcpkg.json
cmake/: Boilerplate.cmake
examples/hello_world/: main.pr
grammar/: Prism.g4  nodes.json  schema.json
libs/Prism.Core/: Prism.Core.csproj
libs/Prism.Core/Diagnostics/: DiagnosticInfo.cs  DiagnosticSeverity.cs
libs/Prism.Core/Text/: SourceFile.cs  SourcePosition.cs  TextCursor.cs
libs/core/: CMakeLists.txt
libs/core/include/prism/core/: exports.h  names.hpp  per_project_boilerplate.hpp  syntax.hpp
libs/core/src/private/ast/: macros.hpp
libs/core/src/private/diagnostics/: diagnostic_info.cpp
libs/core/src/private/inline/: names.inl  syntax.inl  tokens.inl
libs/core/src/private/lexer/: defaults.cpp  lexer.cpp  matchers.cpp  token_stream.cpp
libs/core/src/private/memory/: buffer_pool.cpp
libs/core/src/private/parser/: parser.cpp
libs/core/src/private/semantic/: symbol.cpp
libs/core/src/private/strings/: identifier.cpp  name.cpp
libs/core/src/private/syntax/: child_list.cpp  green_node.cpp  lexer.cpp  lifetime.cpp  list.cpp  literals.cpp  node.cpp  node_or_token.cpp  token.cpp  token_stream.cpp  tree.cpp  trivia.cpp
libs/core/src/private/syntax/green/: clauses.cpp  declaration.cpp  expression.cpp  green_node.cpp  green_token.cpp  green_trivia.cpp  green_trivia_list.cpp  initializer.cpp  list.cpp  node.cpp  statement.cpp  token.cpp  trivia.cpp  type.cpp  type_hint.cpp
libs/core/src/private/text/: name.cpp
libs/core/src/public/: context.ixx  core.ixx  diagnostic.ixx  generated.ixx  syntax.ixx  util.ixx
libs/core/src/public/ast/: ast.ixx  common_syntax.ixx  compilation_unit.ixx  compilation_unit_syntax.ixx  declaration_syntax.ixx  expression_syntax.ixx  identifier_syntax.ixx  statement_syntax.ixx  syntax_node.ixx  type_syntax.ixx
libs/core/src/public/diagnostics/: diagnostic_descriptor.ixx  diagnostic_info.ixx  diagnostic_severity.ixx
libs/core/src/public/lexer/: defaults.ixx  lexer.ixx  matchers.ixx  text_cursor.ixx  token.ixx  token_matcher.ixx  token_stream.ixx
libs/core/src/public/memory/: alignment.ixx  arena_allocator.ixx  buffer_pool.ixx  persistent_allocator.ixx  ref_counted_ptr.ixx
libs/core/src/public/parser/: parser.ixx  token_cursor.ixx
libs/core/src/public/semantic/: symbol.ixx
libs/core/src/public/source/: source_file.ixx
libs/core/src/public/strings/: identifier.ixx  name.ixx
libs/core/src/public/syntax/: child_list.ixx  diagnostics.ixx  flags.ixx  green_node.ixx  kind.ixx  lexer.ixx  lifetime.ixx  list.ixx  list_view.ixx  literals.ixx  node.ixx  node_or_token.ixx  parsed_tree.ixx  token.ixx  token_stream.ixx  tree.ixx  trivia.ixx
libs/core/src/public/syntax/green/: clauses.ixx  declaration.ixx  expression.ixx  green_node.ixx  green_token.ixx  green_trivia.ixx  green_trivia_list.ixx  green_value_token.ixx  initializer.ixx  list.ixx  node.ixx  separated_list.ixx  statement.ixx  token.ixx  trivia.ixx  type.ixx  type_hint.ixx
libs/core/src/public/text/: cursor.ixx  name.ixx  source_file.ixx  text_span.ixx
libs/core/src/public/type_traits/: basic.ixx  comparison.ixx
libs/core/src/public/util/: enum_class_flags.ixx  exceptions.ixx  hashing.ixx  make_array.ixx  noncopyable.ixx  numerics.ixx  optional.ixx  optional_ref.ixx  overload.ixx
libs/core/tests/: CMakeLists.txt  lexer_test.cpp  name_test.cpp  parser_test.cpp  source_file_test.cpp
src/Prism.Compiler/: Prism.Compiler.csproj  Program.cs  RootCommand.cs
src/Prism.Compiler/Properties/: launchsettings.json
src/Prism.Core/: CompilationContext.cs  CompilerExecutor.cs  Diagnostic.cs  DiagnosticBag.cs  IDiagnosticSink.cs  Location.cs  NullDiagnosticSink.cs  Prism.Core.csproj  SourceUnit.cs  TargetPlatform.cs
src/Prism.Core/Ast/: BasicSyntax.cs  BinaryOperator.cs  BuiltInType.cs  CompilationUnitSyntax.cs  DeclarationSyntax.cs  ExpressionSyntax.cs  StatementSyntax.cs  SyntaxNode.cs  TypeSyntax.cs  UnaryOperator.cs
src/Prism.Core/Diagnostics/: Diagnostic.cs  DiagnosticAttribute.cs  DiagnosticBag.cs  DiagnosticDescriptor.cs  DiagnosticInfo.cs  DiagnosticSeverity.cs  IDiagnosticSink.cs  NullDiagnosticSink.cs
src/Prism.Core/Parse/: Lexer.cs  ParseDiagnostics.cs  Parser.cs  SourceFile.cs  TextCursor.cs  Token.cs  TokenAttributes.cs  TokenKind.cs  TokenKindExtensions.cs  TokenStream.cs
src/Prism.Core/Polyfill/: ClosedAttribute.cs
src/Prism.Core/Semantic/: AsyncResolutionState.cs  BindingContext.cs  BuiltInTypeSet.cs  BuiltInTypes.cs  Compilation.cs  ConversionKind.cs  DeclarationBinder.cs  DeclarationScanner.cs  DeclarationScope.cs  DeclarationScopeBuilder.cs  LocalScope.cs  ResolutionContext.cs  ResolvedSemanticState.cs  SemanticBinder.cs  SemanticDiagnostics.cs  SemanticModel.cs  SemanticResolver.cs  Symbol.cs  SymbolBinder.cs  SymbolDeclaration.cs  SymbolDeclarationBuilder.cs
src/Prism.Core/Source/: SourceFile.cs  TextSpan.cs
src/Prism.Core/Strings/: FindName.cs  KnownName.cs  Name.cs  NameEntryHandle.cs  NameEntryId.cs  NameEntryList.cs  NameHash.cs  NamePool.cs  NamePoolShard.cs  NameSlot.cs  NameValue.cs  Names.cs
src/Prism.Core/Syntax/: BasicSyntax.cs  BinaryOperator.cs  BuiltInType.cs  CompilationUnitSyntax.cs  DeclarationSyntax.cs  ExpressionSyntax.cs  ISyntaxElement.cs  Literals.cs  StatementSyntax.cs  (+10 more)
src/Prism.SourceGenerator/: Helpers.cs  Prism.SourceGenerator.csproj  TemplateLoader.cs
templates/: per_project_boilerplate.cpp.in
test/Prism.Core.Tests/: DeclarationScanningTests.cs  LexerTests.cs  NameTest.cs  OperatorResolutionTests.cs  ParserTests.cs  Prism.Core.Tests.csproj  SemanticBinderTest.cs
tools/Prism.SourceGenerator/: Helpers.cs  Prism.SourceGenerator.csproj  TemplateLoader.cs
tools/Prism.SyntaxGenerator/: CaseExtensions.cs  ClosedPolyfill.cs  DictionaryExtensions.cs  Emitter.cs  Helpers.cs  IndentedWriterUtils.cs  Prism.SyntaxGenerator.csproj  Program.cs  SpecificationTransformer.cs  TemplateLoader.cs  nodes.json  schema.json
(+103 files in other folders)
